BUG#44840 - ndbapi compiler warning - type qualifier ignored for function return type  - Remove the "const"